just a litte bit uh dis

--- a/client/index.html
+++ b/client/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <title>Welcome to the Gun Club</title>
-    <link rel="stylesheet" type="text/css" href="./style.css" />
+    <!-- <link rel="stylesheet" type="text/css" href="./style.css" /> -->
   </head>
   <body>
     <main id="root"></main>
+    <!-- <script src="dist/bundle.js"></script> -->
   </body>
 </html>
